# Ur5_simulation

./: .gitignore  README.md
src/frame_transform/: CMakeLists.txt  package.xml  setup.cfg
src/frame_transform/frame_transform/: joint_states_filter.py  object_position_camera_base_link.py
src/frame_transform/srv/: FrameTransform.srv
src/grasp_detection/: package.xml  setup.cfg  setup.py
src/grasp_detection/grasp_detection/: faster_rcnn_node.py  grasp_detector.py  pick_executor.py  sulabh_grasp_detection.py
src/grasping_objects/: CMakeLists.txt
src/grasping_objects/launch/: spawn_objects.launch.py
src/grasping_objects/urdf/: tennis_ball.urdf  tennis_ball.urdf.xacro
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/ur_description/share/ur_description/: package.sh
src/install/ur_description/share/ur_description/urdf/: ur.urdf.xacro  ur_macro.xacro
src/install/ur_simulation_gazebo/share/ament_index/resource_index/parent_prefix_path/: ur_simulation_gazebo
src/install/ur_simulation_gazebo/share/ur_simulation_gazebo/: package.sh
src/log/: latest_build
src/res_grasp_detection/: package.xml  setup.cfg  setup.py
src/res_grasp_detection/res_grasp_detection/: lower_model_node.py  pruned_model_node.py
src/ur5_camera_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_camera_gripper_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  sensors_3d.yaml  ur.srdf  ur.urdf.xacro
src/ur5_camera_gripper_new_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_camera_gripper_new_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
src/ur5_camera_gripper_new_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur5_ik_master_class/: CMakeLists.txt  package.xml
src/ur5_ik_master_class/src/: inverseKinematics.cpp  lab_sim.cpp  lab_sim_attachlink.cpp  pick_place.cpp  pick_place_camera.cpp  pick_place_service.cpp  real_pnp.cpp  ur5_ik_test.cpp
src/ur5e_sim/: CMakeLists.txt
src/ur5e_sim/config/: ur5_controllers_gripper.yaml
src/ur5e_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ur5e_sim/install/ur5e_sim/share/ament_index/resource_index/parent_prefix_path/: ur5e_sim
src/ur5e_sim/install/ur5e_sim/share/ur5e_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ur5e_sim/install/ur5e_sim/share/ur5e_sim/launch/: spawn_ur5_camera.launch.py  view_ur5_camera.launch.py
src/ur5e_sim/install/ur5e_sim/share/ur5e_sim/rviz/: view_ur5_camera.rviz
src/ur5e_sim/install/ur5e_sim/share/ur5e_sim/urdf/: camera.xacro  ur5_camera.urdf.xacro  ur5_macro.xacro
src/ur5e_sim/launch/: spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper.launch.py  spawn_ur5_camera_gripper_lab_world_moveit.launch.py  spawn_ur5_camera_gripper_moveit.launch.py  spawn_ur5_camera_gripper_world_moveit.launch.py  view_ur5_camera_gripper.launch.py
src/ur5e_sim/log/: latest_build
src/ur5e_sim/models/Basement/: model.config  model.sdf
src/ur5e_sim/models/red_cube/: model.sdf
src/ur5e_sim/rviz/: config_ur5_robotiq.rviz  view2_ur5_camera.rviz
src/ur5e_sim/urdf/: camera.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur5.ros2_control.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
src/ur5e_sim/worlds/: mabllab_grasp_workspace.world  mabllab_grasp_workspace_clean.world  mabllab_workspace.world
